--- a/application-service/src/main/resources/application.properties
+++ b/application-service/src/main/resources/application.properties
@@ -1,2 +1,6 @@
-# Configuration file
-# key = value
+# datasource configuration
+quarkus.datasource.url = jdbc:mysql://localhost:3306/applications
+quarkus.datasource.driver = com.mysql.cj.jdbc.Driver
+quarkus.datasource.username = hibernate
+quarkus.datasource.password = hibernate
+quarkus.hibernate-orm.database.generation= drop-and-create
