--- a/approval-client/package.json
+++ b/approval-client/package.json
@@ -2,14 +2,16 @@
   "name": "approval-client",
   "version": "0.1.0",
   "private": true,
-  "proxy" : "http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-hook-form": "^4.10.1",
+    "react-scripts": "3.4.0",
+    "react-toast-notifications": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
